Added the new Max_POST_Parameter AWS configuration parameter.

--- a/demo/exe/configuration/config.ini
+++ b/demo/exe/configuration/config.ini
@@ -648,6 +648,14 @@ Max_Connection 5
 # One thread is used for each connection, so a value of 5 basically means max 5 
 # concurrent requests.
 
+Max_POST_Parameters 100
+# Positive
+# Default: 100
+# AWS configuration option: Yes
+#
+# The maximum amount of POST parameters the server will accept from any one
+# connection.
+
 MIME_Types configuration/aws.mime
 # String
 # Default: configuration/aws.mime
