--- a/demo/exe/configuration/config.ini
+++ b/demo/exe/configuration/config.ini
@@ -664,6 +664,16 @@ MIME_Types configuration/aws.mime
 # The MIME type file. MIME types defined in this file are added to AWS when the
 # server is started.
 
+Protocol_Family Family_Unspec
+# String
+# Default: Family_Unspec
+# Used by AWS: yes
+#
+# Set the server protocol family.
+#     Family_Inet for IPv4
+#     Family_Inet6 for IPv6
+#     Family_Unspec for unspecified protocol family
+
 Receive_Timeout 30.0
 # Duration
 # Default: 30.0
