Added all the default syslogd log handlers to Yolk.Log.
The result of this was a slew of new configuration settings, and while
I was messing around with those, I decided to move the core config.ini
file to extras/config.ini.dist. This means that there's no longer a
config.ini file in demo/exe/configuration. Users will have to copy the
extras/config.ini.dist file manually.

The rc.yolk script was also moved from demo/tools/ to extras/

--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,9 @@ demo/build_production/*
 demo/exe/yolk_demo
 demo/exe/*.pid
 
+# Do not track the default config.ini file in demo/exe/configuration
+demo/exe/configuration/config.ini
+
 # Do not track demo session data
 demo/exe/session/*
 
