--- a/demo/exe/configuration/my_config.ini
+++ b/demo/exe/configuration/my_config.ini
@@ -29,6 +29,12 @@ Handler_Email /email
 #
 # The expression to match the /email resource.
 
+Handler_Index /
+# String.
+# Default: /
+#
+# The expression to match the / resource.
+
 Handler_Session_Test /sessiontest
 # String.
 # Default: /sessiontest
@@ -41,11 +47,11 @@ Handler_Syndication /syndication
 #
 # The expression to match the /syndication resource.
 
-Handler_Index /
+Handler_Websocket /websocket
 # String.
-# Default: /
+# Default: /websocket
 #
-# The expression to match the / resource.
+# The expression to match the /websocket resource.
 
 ##################################
 #     Path To Template Files     #
@@ -74,6 +80,12 @@ Template_Session_Test templates/website/session_test.tmpl
 # Default: templates/website/session_test.tmpl
 #
 # Path to the Handler_Session_Test template file.
+
+Template_Websocket templates/website/websocket.tmpl
+# String.
+# Default: templates/website/websocket
+#
+# Path to the Handler_Websocket template file.
 
 ##################################
 #            Database            #
