--- a/extras/config.ini.dist
+++ b/extras/config.ini.dist
@@ -953,6 +953,15 @@ WebSocket_Origin
 # .fr domains you can use something like this:
 #       .*.fr
 
+WebSocket_Priority 48
+# Natural range 0 .. 98
+# Default: 48
+# AWS configuration option: Yes
+#
+# WebSocket task priority. See the RM:
+#     http://www.ada-auth.org/standards/12rm/html/RM-D-1.html
+# If you do not know what this is, then you probably don't need to change it.
+
 WWW_Root static_content
 # String
 # Default: static_content
