Added SQLite to the /dbtest resource.

--- a/demo/exe/configuration/my_config.ini
+++ b/demo/exe/configuration/my_config.ini
@@ -88,7 +88,7 @@ Template_Websocket templates/website/websocket.tmpl
 # Path to the Handler_Websocket template file.
 
 ##################################
-#            Database            #
+#           PostgreSQL           #
 ##################################
 
 DB_Host localhost
@@ -114,6 +114,16 @@ DB_User adauser
 # Default: adauser
 #
 # The database user.
+
+##################################
+#             SQLite             #
+##################################
+
+SQLite_Database sqlite/yolk.db
+# String.
+# Default: sqlite/yolk.db
+#
+# The SQLite test database.
 
 ##################################
 #             Email              #
